feat(tags): add the ability to manage tags
