# api/http/handler/tags/tag_delete.go
@@ -1,0 +1,25 @@
+package tags
+
+import (
+	"net/http"
+
+	"github.com/portainer/portainer"
+	httperror "github.com/portainer/portainer/http/error"
+	"github.com/portainer/portainer/http/request"
+	"github.com/portainer/portainer/http/response"
+)
+
+// DELETE request on /api/tags/:name
+func (handler *Handler) tagDelete(w http.ResponseWriter, r *http.Request) *httperror.HandlerError {
+	id, err := request.RetrieveNumericRouteVariableValue(r, "id")
+	if err != nil {
+		return &httperror.HandlerError{http.StatusBadRequest, "Invalid tag identifier route variable", err}
+	}
+
+	err = handler.TagService.DeleteTag(portainer.TagID(id))
+	if err != nil {
+		return &httperror.HandlerError{http.StatusInternalServerError, "Unable to remove the tag from the database", err}
+	}
+
+	return response.Empty(w)
+}
